Implement 3 Mac accessibility parameterized attributes

This change implements support for AXBoundsForTextMarkerRange,
AXTextMarkerRangeForUnorderedTextMarkers, and AXIndexForChildUIElement.

The noticeable benefit of this change is that VoiceOver now draws its
bounding box around the cursor or selection when you're typing or
selecting in a text field.

BUG=633598

Review-Url: https://codereview.chromium.org/2207573002
Cr-Commit-Position: refs/heads/master@{#409712}

Former-commit-id: 958086533d06dfbd0f172405036e78be79ba283f